# img-storage

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  wrapper.h
src/: api.rs  libvips.rs  main.rs  service.rs  tests.rs
