[package]
name = "img-storage"
version = "0.1.0"
authors = ["darksome"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
reqwest = "=0.10.0-alpha.2"
futures-preview = "=0.3.0-alpha.19" 
tokio = "=0.2.0-alpha.6"
async-std = "1.0.1"
serde = { version = "1.0.102", features = ["derive"] } 
serde_json = "1.0.41"
base64 = "0.11.0"
log = "0.4.8"
env_logger = "0.7.1"
multipart-async = { git = "https://github.com/abonander/multipart-async", features = ["hyper"]}
libc = "0.2.65"

[build-dependencies]
bindgen = "0.52.0"